fix(slider): Remove jump animation for instant user feedback

--- a/src/tokens/_flexy-comp-slider.scss
+++ b/src/tokens/_flexy-comp-slider.scss
@@ -29,7 +29,7 @@ $_flexy-comp-slider: (
   value-indicator-text-color: $flexy-sys-color-on-primary,
   value-indicator-text-size: 13px,
   value-indicator-m3-size: 28px,
-  animation-jumping-duration: 160ms,
+  animation-jumping-duration: 0ms,
   animation-jumping-easing: $flexy-sys-motion-ease-out-cubic,
   animation-sliding-duration: 0ms,
   animation-sliding-easing: ease,
